# literature-manager

./: .env.example  .gitignore  .literature-index.json  .literature-log.txt  .topic-profiles.json  LICENSE  README.md  ROADMAP_MENUBAR_V2.md  com.samleuthold.literature-manager-app.plist  com.samleuthold.literature-manager.plist  config.yaml.example  install_background_service.sh  pyproject.toml  setup_app.py
archive/documentation/: FIXED_TAXONOMY_IMPLEMENTATION.md  TOPICS_DRAFT.md  config.yaml.example  optimized_categorization_prompt.md
archive/migration-scripts/: copy_zotero_to_inbox.py  final_cleanup.py  migrate_downloads.py  migrate_zotero_pdfs.py  sort_needs_review.py
src/literature_manager/: __init__.py  __main__.py  cli.py  config.py  core.py  index_validator.py  naming.py  notifications.py  operations.py  taxonomy.py  topics.py  topics.yml  utils.py  watcher.py  zotero_sync.py
src/literature_manager/app/: __init__.py  menubar.py  status.py
src/literature_manager/extractors/: __init__.py  doi.py  exceptions.py  llm.py  orchestrator.py  pdf_metadata.py  text_parser.py
